--- a/app/views/web/ost/roadmap/_desktop.erb
+++ b/app/views/web/ost/roadmap/_desktop.erb
@@ -30,11 +30,11 @@
 
     <%= render :partial => "/web/ost/roadmap/desktop/2020-q2" %>
 
-    <%= render :partial => "/web/ost/roadmap/desktop/2020-q3" %>
+    <%#= render :partial => "/web/ost/roadmap/desktop/2020-q3" %>
 
     <%= render :partial => "/web/ost/roadmap/desktop/2020-q4" %>
 
-    <%= render :partial => "/web/ost/roadmap/desktop/2021-q1" %>
+    <%#= render :partial => "/web/ost/roadmap/desktop/2021-q1" %>
 
     <%= render :partial => "/web/ost/roadmap/desktop/2021-q2" %>
 
