--- a/app/views/web/ost/roadmap/_mobile.erb
+++ b/app/views/web/ost/roadmap/_mobile.erb
@@ -34,7 +34,7 @@
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-btx-exchange"></use>
           </switch>
           </svg>
-          BTX EXCHANGE
+          BT EXCHANGE
         </label>
       </span>
     </div>
@@ -42,17 +42,14 @@
 
   <section>
     <div class="mobile_infrastructure">
-      <h3>mobile_infrastructure</h3>
       <%= render :partial => "/web/ost/roadmap/mobile/infrastructure" %>
     </div>
 
     <div class="mobile_developer_tools">
-      <h3>mobile_developer_tools</h3>
       <%= render :partial => "/web/ost/roadmap/mobile/developer_tools" %>
     </div>
 
     <div class="mobile_btx_exchange">
-      <h3>mobile_btx_exchange</h3>
       <%= render :partial => "/web/ost/roadmap/mobile/btx_exchange" %>
     </div>
   </section>
