--- a/app/views/web/ost/roadmap/desktop/_2019-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q2.erb
@@ -19,47 +19,36 @@
             </svg>
           </div>
           <div class="col-7 align-self-center pl-0">
-            <span class="text-bold">73 successful Proofs of Concept completed</span> by developers around the world.
+            <span class="text-bold">OST General Availability for mainstream businesses.</span>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4">
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-6 bg-line first"></div>
-                <div class="col-6 bg-line first"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
+  <div class="row bg-h-border position-relative">
+    <div class="col-4">
+      <div class="row h-100">
+        <div class="col-6 bg-line first py-5 d-flex align-items-center">
           <div class="container-content">
-            <div class="text-bold">OST KIT Alpha 2</div>
-            <div class="status">Status: Complete</div>
-            <ul class="list-unstyled social-icons mb-2">
-              <li>
-                <a href="">
-                  <svg class="social-icon">
-                    <switch>
-                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                    </switch>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-            <ul class="desc-lines">
-              <li>Token Transfers via API</li>
-            </ul>
+            <div class="text-bold">OpenST Protocol 0.10.1 Wallet SDK</div>
+            <div class="status">Status: Upcoming</div>
           </div>
         </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
+        <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
+      </div>
+    </div>
+    <div class="col-4 bg-line second py-5 d-flex align-items-center">
+      <div class="container-content">
+        <div class="text-bold">OST KIT Release<br/>
+          OST Wallet Release</div>
+        <div class="status">Status: Upcoming</div>
+      </div>
+    </div>
+    <div class="col-4 bg-line third py-5 align-items-center d-flex">
+      <div class="container-content">
+        <div class="text-bold text-uppercase">Swap BT for BT, ETH, BTC</div>
+        <div class="status">Status: Upcoming</div>
       </div>
     </div>
   </div>
