--- a/app/views/web/ost/roadmap/desktop/_2019-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q4.erb
@@ -19,38 +19,34 @@
             </svg>
           </div>
           <div class="col-7 align-self-center">
-            <span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.
+
+            <span class="text-bold">Enable anyone to run an OpenST BT-EX or BT-DEX.</span>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4">
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
-                <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            <div class="text-bold">OST Economy Optimization</div>
+  <div class="row bg-h-border position-relative">
+    <div class="col-4">
+      <div class="row h-100">
+        <div class="col-6 bg-line first py-5 d-flex align-items-center">
+          <div class="container-content p-15-10">
+            <div class="text-bold">OpenST Protocol 0.11.0</div>
             <div class="status">Status: Upcoming</div>
+            <ul class="desc-lines">
+              <li>BT-EX & BT-DEX Framework</li>
+            </ul>
           </div>
         </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex">
-          <div class="container-content">
-            <div class="text-bold">Additional Currency Pairings</div>
-            <div class="status">Status: Upcoming</div>
-          </div>
-        </div>
+        <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
+      </div>
+    </div>
+    <div class="col-4 bg-line second py-5 d-flex align-items-center"></div>
+    <div class="col-4 bg-line third py-5 align-items-center d-flex">
+      <div class="container-content">
+        <div class="text-bold">Additional Currency Pairings</div>
+        <div class="status">Status: Upcoming</div>
       </div>
     </div>
   </div>
