--- a/app/views/web/ost/roadmap/desktop/_2021-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2021-q2.erb
@@ -19,7 +19,7 @@
             </svg>
           </div>
           <div class="col-7 align-self-center">
-            <span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.
+            <span class="text-bold">Fully autonomous decentralized token economies on any major blockchain, at M2M-scale, with exchange liquidity.</span>
           </div>
         </div>
       </div>
@@ -47,14 +47,9 @@
 
   <div class="row">
     <div class="col-12">
-      <div class="row">
-        <div class="col-8">
-          <div class="container-content">
-            <div class="text-bold">OpenST 2.0: Multi-Hop Gateways</div>
-            <div class="status">Status: Upcoming</div>
-          </div>
-        </div>
-        <div class="col-4 bg-line third"></div>
+      <div class="container-content">
+        <div class="text-bold">OpenST 3.0 & OST 3.0: Additional blockchains beyond Ethereum</div>
+        <div class="status">Status: Upcoming</div>
       </div>
     </div>
   </div>
