--- a/app/views/web/ost/roadmap/desktop/_quarters.erb
+++ b/app/views/web/ost/roadmap/desktop/_quarters.erb
@@ -56,9 +56,9 @@
                   <li class="quarter-item" data-id="2020-q2">
                     <a href="#2020-q2" class="smooth-scroll">Q2</a>
                   </li>
-                  <li class="quarter-item" data-id="2020-q3">
-                    <a href="#2020-q3" class="smooth-scroll">Q3</a>
-                  </li>
+                  <!--<li class="quarter-item" data-id="2020-q3">-->
+                    <!--<a href="#2020-q3" class="smooth-scroll">Q3</a>-->
+                  <!--</li>-->
                   <li class="quarter-item" data-id="2020-q4">
                     <a href="#2020-q4" class="smooth-scroll">Q4</a>
                   </li>
@@ -67,9 +67,9 @@
               <div class="col-2 time-line">
                 <span class="year">2021</span>
                 <ul>
-                  <li class="quarter-item" data-id="2021-q1">
-                    <a href="#2021-q1" class="smooth-scroll">Q1</a>
-                  </li>
+                  <!--<li class="quarter-item" data-id="2021-q1">-->
+                    <!--<a href="#2021-q1" class="smooth-scroll">Q1</a>-->
+                  <!--</li>-->
                   <li class="quarter-item" data-id="2021-q2">
                     <a href="#2021-q2" class="smooth-scroll">Q2</a>
                   </li>
