--- a/app/views/web/ost/roadmap/desktop/_2017-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2017-q4.erb
@@ -26,75 +26,66 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4 bg-line first py-5 d-flex align-items-center">
-          <div class="container-content">
-            <div class="text-bold">OpenST Protocol 0.9.1</div>
-            <div class="status">Status: Complete</div>
-            <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
-              <li class="list-inline-item">
-                <a href="https://t.me/ostdotcom" target="_blank" title="OST - Telegram">
-                  <span class="roadmap-telegram-icon"></span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://twitter.com/OSTdotcom" target="_blank" title="OST - Twitter">
-                  <span class="roadmap-twitter-icon"></span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://medium.com/ostdotcom" target="_blank" title="OST - Medium">
-                  <span class="roadmap-medium-icon"></span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">
-                  <span class="roadmap-linkedIn-icon"></span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.facebook.com/OST" target="_blank" title="OST - Facebook">
-                  <span class="roadmap-facebook-icon"></span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.youtube.com/ostdotcom" target="_blank" title="OST - Youtube">
-                  <span class="roadmap-youtube-icon"></span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href=" https://github.com/OpenSTFoundation" target="_blank" title="OST - Github">
-                  <span class="roadmap-github-icon"></span>
-                </a>
-              </li>
-            </ul>
+  <div class="row bg-h-border position-relative">
+    <div class="col-4 bg-line first py-5 d-flex align-items-center">
+      <div class="container-content">
+        <div class="text-bold">OpenST Protocol</div>
+        <div class="status">Status: Complete</div>
+        <ul class="p-0 m-0 list-unstyled" style="font-size: 0">
+          <li class="list-inline-item">
+            <a href="https://t.me/ostdotcom" target="_blank" title="OST - Telegram">
+              <span class="roadmap-telegram-icon"></span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://twitter.com/OSTdotcom" target="_blank" title="OST - Twitter">
+              <span class="roadmap-twitter-icon"></span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://medium.com/ostdotcom" target="_blank" title="OST - Medium">
+              <span class="roadmap-medium-icon"></span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.linkedin.com/company/18209852" target="_blank" title="OST - Linkedin">
+              <span class="roadmap-linkedIn-icon"></span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.facebook.com/OST" target="_blank" title="OST - Facebook">
+              <span class="roadmap-facebook-icon"></span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.youtube.com/ostdotcom" target="_blank" title="OST - Youtube">
+              <span class="roadmap-youtube-icon"></span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href=" https://github.com/OpenSTFoundation" target="_blank" title="OST - Github">
+              <span class="roadmap-github-icon"></span>
+            </a>
+          </li>
+        </ul>
 
-            <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/openst-protocol-0.9.1@2x.png" class="img-fluid d-block my-3"/>
-            <ul class="desc-lines">
-              <li>0.9.0 Mint Branded Tokens</li>
-              <li>0.9.1 Mainnet Developer Release</li>
-            </ul>
-            <p class="collapse m-0" id="block-id">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi tempore asperiores et vel
-            </p>
-            <a href="" class="d-block more-desc" target="_blank">Read more</a>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            <div class="text-bold letter-space">OST KIT R&D</div>
-            <div class="status">Status: Complete</div>
-            <ul class="desc-lines">
-              <li>Token economy design research</li>
-              <li>Token economy design pre-specs</li>
-              <li>Token economy software pre-specs</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
+        <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/openst-protocol-0.9.1@2x.png" class="img-fluid d-block my-3"/>
+        <ul class="desc-lines">
+          <li>0.9.0 Mint Branded Tokens</li>
+          <li>0.9.1 Mainnet Developer Release</li>
+        </ul>
+        <p class="collapse m-0" id="block-id">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi tempore asperiores et vel
+        </p>
+        <a href="" class="d-block more-desc" target="_blank">Read more</a>
       </div>
     </div>
+    <div class="col-4 bg-line second py-5 d-flex align-items-center">
+      <div class="container-content">
+        <div class="text-bold letter-space">OST KIT R&D</div>
+        <div class="status">Status: Complete</div>
+      </div>
+    </div>
+    <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
   </div>
 </div>
