--- a/app/views/web/ost/roadmap/desktop/_2018-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q3.erb
@@ -1,4 +1,5 @@
 <div class="q-elements" id="2018-q3">
+
   <div class="row quarters-year-row">
     <div class="col-12">
       <div class="container-content pt-1 pb-0">
@@ -19,76 +20,46 @@
             </svg>
           </div>
           <div class="col-7 align-self-center pl-0">
-            <span class="text-bold">200+ developer</span> teams integrating OST Alpha 3 into their apps. Publish framework for scaling token economies.
+            <span class="text-bold">200+ developer</span> teams integrating OST Alpha 3 into their apps. <br/>Publish framework for scaling token economies.
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4">
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-6 bg-line first py-5 d-flex align-items-center">
-                  <div class="container-content p-15-10">
-                    <div class="text-bold">OpenST Protocol</div>
-                    <div class="status">Status: In Progress</div>
-                    <ul class="list-unstyled social-icons mb-2">
-                      <li>
-                        <a href="">
-                          <svg class="social-icon">
-                            <switch>
-                              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                            </switch>
-                          </svg>
-                        </a>
-                      </li>
-                    </ul>
-                    <ul class="desc-lines">
-                      <li>0.9.3  Cross-chain token-messaging</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-6 bg-line first py-5 d-flex align-items-center">
-                  <div class="container-content p-15-10">
-                    <div class="text-bold">OpenST Mosaic R&D</div>
-                    <div class="status">Status: In Progress</div>
-                    <ul class="desc-lines">
-                      <li>Scalable PoS Blockchains Finalized on Ethereum</li>
-                    </ul>
-                    <a href="" class="d-block more-desc" target="_blank">Read more</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            <div class="text-bold">OST KIT Alpha 3</div>
-            <div class="status">Status: In Progress</div>
-            <ul class="list-unstyled social-icons mb-2">
-              <li>
-                <a href="">
-                  <svg class="social-icon">
-                    <switch>
-                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                    </switch>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+  <div class="row bg-h-border position-relative">
+    <div class="col-4">
+      <div class="row h-100">
+        <div class="col-6 bg-line first py-5 d-flex align-items-center">
+          <div class="container-content p-15-10">
+            <div class="text-bold">OpenST Protocol</div>
+            <div class="status">Status: Complete</div>
             <ul class="desc-lines">
-              <li>Wallet-lite Ledger & Balance APIs</li>
+              <li>0.9.3  Cross-chain token-messaging</li>
             </ul>
           </div>
         </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
+        <div class="col-6 bg-line first py-5 d-flex align-items-center">
+          <div class="container-content p-15-10">
+            <div class="text-bold">OpenST Mosaic Paper</div>
+            <div class="status">Status: Complete</div>
+            <ul class="desc-lines">
+              <li>Scalable PoS Blockchains Finalized on Ethereum</li>
+            </ul>
+            <a href="" class="d-block more-desc" target="_blank">Read more</a>
+          </div>
+        </div>
       </div>
     </div>
+    <div class="col-4 bg-line second py-5 d-flex align-items-center">
+      <div class="container-content">
+        <div class="text-bold">OST KIT Alpha 3</div>
+        <div class="status">Status: Complete</div>
+        <ul class="desc-lines">
+          <li>Wallet-lite Ledger & Balance APIs</li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
   </div>
 </div>
