--- a/app/views/web/ost/roadmap/desktop/_2018-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q4.erb
@@ -19,87 +19,53 @@
             </svg>
           </div>
           <div class="col-7 align-self-center">
-            <span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.
+            <span class="text-bold">Test integrations of OST on Mainnet with cash-out to OST</span>.
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4">
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-6 bg-line first py-5 d-flex align-items-center">
-                  <div class="container-content p-15-10">
-                    <div class="text-bold">OpenST Protocol 0.9.4</div>
-                    <div class="status">Status: Upcoming</div>
-                    <ul class="list-unstyled social-icons mb-2">
-                      <li>
-                        <a href="">
-                          <svg class="social-icon">
-                            <switch>
-                              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                            </switch>
-                          </svg>
-                        </a>
-                      </li>
-                    </ul>
-                    <ul class="desc-lines">
-                      <li>Decentralized keys engine & token rules engine</li>
-                    </ul>
-                    <div class="mt-3 mb-2 flag-icon">
-                      <svg class="mx-auto d-block">
-                        <switch>
-                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-small-flag"></use>
-                        </switch>
-                      </svg>
-                    </div>
-                    <div class="text-bold">OpenST Protocol 0.9.4</div>
-                    <div class="status">Status: Upcoming</div>
-                    <ul class="desc-lines">
-                      <li>Mainnet Alpha</li>
-                    </ul>
-
-                  </div>
-                </div>
-                <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            <div class="text-bold">OST KIT Alpha 4</div>
-            <div class="status">Status: Upcoming</div>
-            <ul class="desc-lines">
-              <li>Scalability & Performance Upgrades & Testing. Multi-Chain</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex">
-          <div class="container-content">
-            <div class="text-bold text-uppercase">Exchange</div>
+  <div class="row bg-h-border position-relative">
+    <div class="col-4">
+      <div class="row h-100">
+        <div class="col-6 bg-line first py-5 d-flex align-items-center">
+          <div class="container-content p-15-10">
+            <div class="text-bold">OpenST Protocol 0.9.4</div>
             <div class="status">Status: In Progress</div>
-            <ul class="list-unstyled social-icons mb-2">
-              <li>
-                <a href="">
-                  <svg class="social-icon">
-                    <switch>
-                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                    </switch>
-                  </svg>
-                </a>
-              </li>
-            </ul>
             <ul class="desc-lines">
-              <li>Redeem BT for OST</li>
+              <li>Decentralized keys engine & token rules engine</li>
+            </ul>
+            <div class="mt-3 mb-2 flag-icon">
+              <svg class="mx-auto d-block">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-small-flag"></use>
+                </switch>
+              </svg>
+            </div>
+            <div class="text-bold">OpenST Protocol 0.9.5</div>
+            <div class="status">Status: In Progress</div>
+            <ul class="desc-lines">
+              <li>Mainnet Alpha</li>
             </ul>
           </div>
         </div>
+        <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
+      </div>
+    </div>
+    <div class="col-4 bg-line second py-5 d-flex align-items-center">
+      <div class="container-content">
+        <div class="text-bold">OST KIT Alpha 4</div>
+        <div class="status">Status: In Progress</div>
+        <ul class="desc-lines">
+          <li>Scalability & Performance Upgrades & Testing. Multi-Chain</li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-4 bg-line third py-5 align-items-center d-flex">
+      <div class="container-content">
+        <div class="text-bold text-uppercase">Redeem BT for OST</div>
+        <div class="status">Status: In Progress</div>
       </div>
     </div>
   </div>
