--- a/app/views/web/ost/roadmap/desktop/_2020-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2020-q2.erb
@@ -11,15 +11,15 @@
               </div>
             </div>
           </div>
-          <div class="col-2 align-self-end px-0" style="font-size: 0">
+          <div class="col-2 align-self-end pl-0" style="font-size: 0">
             <svg class="milestone-logo">
               <switch>
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
               </switch>
             </svg>
           </div>
-          <div class="col-7 align-self-center pl-0">
-            <span class="text-bold">73 successful Proofs of Concept completed</span> by developers around the world.
+          <div class="col-7 align-self-center">
+            <span class="text-bold">Fully autonomous decentralized token economies.</span>
           </div>
         </div>
       </div>
@@ -27,39 +27,58 @@
   </div>
 
   <div class="row">
+    <div class="col-8">
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-6 bg-line second py-5"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="row">
+        <div class="col-12 bg-line third py-5"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4">
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-6 bg-line first"></div>
-                <div class="col-6 bg-line first"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
+      <div class="row">
+        <div class="col-8">
           <div class="container-content">
-            <div class="text-bold">OST KIT Alpha 2</div>
-            <div class="status">Status: Complete</div>
-            <ul class="list-unstyled social-icons mb-2">
-              <li>
-                <a href="">
-                  <svg class="social-icon">
-                    <switch>
-                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                    </switch>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-            <ul class="desc-lines">
-              <li>Token Transfers via API</li>
-            </ul>
+            <div class="text-bold">OpenST Protocol 1.0: OpenST & OpenST Mosaic Fully Decentralized</div>
+            <div class="status">Status: Upcoming</div>
           </div>
         </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
+        <div class="col-4 bg-line third">
+          <div class="container-content">
+            <div class="text-bold">Additional Currency Pairings</div>
+            <div class="status">Status: Upcoming</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-8">
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-3 bg-line first py-5"></div>
+            <div class="col-6 bg-line second py-5"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="row">
+        <div class="col-12 bg-line third py-5"></div>
       </div>
     </div>
   </div>
