--- a/app/views/web/ost/roadmap/desktop/_2018-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2018-q1.erb
@@ -26,96 +26,88 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4 d-flex flex-column">
-          <div class="row bg-line first">
-            <div class="col-12 pt-5"></div>
+  <div class="row bg-h-border position-relative">
+    <div class="col-4 d-flex flex-column">
+      <div class="row bg-line first">
+        <div class="col-12 pt-5"></div>
+      </div>
+      <div class="row h-100">
+        <div class="col-12 d-flex flex-column">
+          <div class="row">
+            <div class="col-12 col-md-6 mx-auto p-0" style="font-size: 0">
+              <svg width="100%" height="100%" viewBox="0 0 211 101" xmlns="http://www.w3.org/2000/svg">
+                <path d="M209 100.068V70.693c0-16.268-12.987-29.455-29.007-29.455h-49.182c-22.429 0-25.181-18.463-25.181-41.238 0 22.775-2.753 41.238-25.181 41.238H31.007C14.987 41.238 2 54.425 2 70.693v29.375" stroke="#D3E3E5" stroke-width="3" fill="none" fill-rule="evenodd"/>
+              </svg>
+            </div>
           </div>
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-12 d-flex flex-column">
-                  <div class="row">
-                    <div class="col-12 col-md-6 mx-auto p-0" style="font-size: 0">
-                      <svg width="100%" height="100%" viewBox="0 0 211 101" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M209 100.068V70.693c0-16.268-12.987-29.455-29.007-29.455h-49.182c-22.429 0-25.181-18.463-25.181-41.238 0 22.775-2.753 41.238-25.181 41.238H31.007C14.987 41.238 2 54.425 2 70.693v29.375" stroke="#D3E3E5" stroke-width="3" fill="none" fill-rule="evenodd"/>
+          <div class="row" style="flex: 1">
+            <div class="col-6 bg-line first">
+              <div class="container-content p-15-10">
+                <div class="text-bold">OpenST Protocol</div>
+                <div class="status">Status: Complete</div>
+                <ul class="list-unstyled social-icons mb-2">
+                  <li>
+                    <a href="">
+                      <svg class="social-icon">
+                        <switch>
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
+                        </switch>
                       </svg>
-                    </div>
-                  </div>
-                  <div class="row" style="flex: 1">
-                    <div class="col-6 bg-line first">
-                      <div class="container-content p-15-10">
-                        <div class="text-bold">OpenST Protocol</div>
-                        <div class="status">Status: Complete</div>
-                        <ul class="list-unstyled social-icons mb-2">
-                          <li>
-                            <a href="">
-                              <svg class="social-icon">
-                                <switch>
-                                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                                </switch>
-                              </svg>
-                            </a>
-                          </li>
-                        </ul>
-                        <ul class="desc-lines">
-                          <li>0.9.2  Token Transfers</li>
-                        </ul>
-                      </div>
-                    </div>
-                    <div class="col-6 bg-line first">
-                      <div class="container-content p-15-10">
-                        <div class="text-bold">OpenST Mosaic R&D</div>
-                        <div class="status">Status: Complete</div>
-                        <ul class="desc-lines">
-                          <li>Asynchronous hetero-geneous composition of blockchains</li>
-                        </ul>
-                        <a href="" class="d-block more-desc" target="_blank">Read more</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                    </a>
+                  </li>
+                </ul>
+                <ul class="desc-lines">
+                  <li>0.9.2  Token Transfers</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6 bg-line first">
+              <div class="container-content p-15-10">
+                <div class="text-bold">OpenST Mosaic R&D</div>
+                <div class="status">Status: Complete</div>
+                <ul class="desc-lines">
+                  <li>Asynchronous hetero-geneous composition of blockchains</li>
+                </ul>
+                <a href="" class="d-block more-desc" target="_blank">Read more</a>
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-6 bg-line pb-5 first"></div>
-            <div class="col-6 bg-line pb-5 first"></div>
-          </div>
         </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            <div class="text-bold">OST KIT Alpha 1</div>
-            <div class="status">Status: Complete</div>
-            <div class="play-bg">
-              <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/ost-kit-alpha@2x.png" class="img-fluid d-block my-3"/>
-              <a href="" class="play-icon" data-toggle="modal" data-target="#helpVideoModal" data-src="https://www.youtube.com/embed/f6N3uKMzasI"></a>
-            </div>
-            <ul class="desc-lines">
-              <li>Setup Economy</li>
-              <li>Simulate Token Transfers</li>
-            </ul>
-            <p class="collapse m-0" id="kit-alpha-1">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi tempore asperiores et vel
-            </p>
-
-            <!-- aria-expanded attribute is mandatory -->
-            <!-- bootstrap changes it to true/false on toggle -->
-            <a href="#kit-alpha-1"
-               class="d-block more-desc"
-               data-toggle="collapse"
-               aria-expanded="false"
-               aria-controls="block-id">
-              <span class="collapsed">View more</span>
-              <span class="expanded">View Less</span>
-            </a>
-          </div>
-        </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
+      </div>
+      <div class="row">
+        <div class="col-6 bg-line pb-5 first"></div>
+        <div class="col-6 bg-line pb-5 first"></div>
       </div>
     </div>
+    <div class="col-4 bg-line second py-5 d-flex align-items-center">
+      <div class="container-content">
+        <div class="text-bold">OST KIT Alpha 1</div>
+        <div class="status">Status: Complete</div>
+        <div class="play-bg">
+          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/ost-kit-alpha@2x.png" class="img-fluid d-block my-3"/>
+          <a href="" class="play-icon" data-toggle="modal" data-target="#helpVideoModal" data-src="https://www.youtube.com/embed/f6N3uKMzasI"></a>
+        </div>
+        <ul class="desc-lines">
+          <li>Setup Economy</li>
+          <li>Simulate Token Transfers</li>
+        </ul>
+        <p class="collapse m-0" id="kit-alpha-1">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi tempore asperiores et vel
+        </p>
+
+        <!-- aria-expanded attribute is mandatory -->
+        <!-- bootstrap changes it to true/false on toggle -->
+        <a href="#kit-alpha-1"
+           class="d-block more-desc"
+           data-toggle="collapse"
+           aria-expanded="false"
+           aria-controls="block-id">
+          <span class="collapsed">View more</span>
+          <span class="expanded">View Less</span>
+        </a>
+      </div>
+    </div>
+    <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
   </div>
 </div>
 
