roadmap page for mobile

--- a/app/views/web/ost/roadmap/mobile/_infrastructure.erb
+++ b/app/views/web/ost/roadmap/mobile/_infrastructure.erb
@@ -22,9 +22,9 @@
 </div>
 
 <div class="row">
-  <div class="col-12 bg-line first pt-5 d-flex align-items-center">
+  <div class="col-12 bg-line first pt-5">
     <div class="container-content">
-      <div class="text-bold">OpenST Protocol 0.9.1</div>
+      <div class="text-bold">OpenST Protocol</div>
       <div class="status">Status: Complete</div>
       <ul class="list-unstyled social-icons">
         <li>
@@ -109,7 +109,7 @@
   </div>
 </div>
 
-<div class="row h-100">
+<div class="row">
   <div class="col-12">
     <div class="row">
       <div class="col-7 col-md-6 mx-auto" style="font-size: 0">
@@ -123,17 +123,6 @@
         <div class="container-content p-15-10">
           <div class="text-bold">OpenST Protocol</div>
           <div class="status">Status: Complete</div>
-          <ul class="list-unstyled social-icons mb-2">
-            <li>
-              <a href="">
-                <svg class="social-icon">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                  </switch>
-                </svg>
-              </a>
-            </li>
-          </ul>
           <ul class="desc-lines">
             <li>0.9.2  Token Transfers</li>
           </ul>
@@ -146,7 +135,6 @@
           <ul class="desc-lines">
             <li>Asynchronous hetero-geneous composition of blockchains</li>
           </ul>
-          <a href="" class="d-block more-desc" target="_blank">Read more</a>
         </div>
       </div>
     </div>
@@ -176,39 +164,23 @@
   </div>
 </div>
 
-<div class="row h-100">
-  <div class="col-12">
-    <div class="row h-100">
-      <div class="col-6 bg-line first pt-5 d-flex">
-        <div class="container-content p-15-10">
-          <div class="text-bold">OpenST Protocol</div>
-          <div class="status">Status: In Progress</div>
-          <ul class="list-unstyled social-icons mb-2">
-            <li>
-              <a href="">
-                <svg class="social-icon">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                  </switch>
-                </svg>
-              </a>
-            </li>
-          </ul>
-          <ul class="desc-lines">
-            <li>0.9.3  Cross-chain token-messaging</li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-6 bg-line first pt-5 d-flex">
-        <div class="container-content p-15-10">
-          <div class="text-bold">OpenST Mosaic R&D</div>
-          <div class="status">Status: In Progress</div>
-          <ul class="desc-lines">
-            <li>Scalable PoS Blockchains Finalized on Ethereum</li>
-          </ul>
-          <a href="" class="d-block more-desc" target="_blank">Read more</a>
-        </div>
-      </div>
+<div class="row">
+  <div class="col-6 bg-line first pt-5 d-flex">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST Protocol</div>
+      <div class="status">Status: Complete</div>
+      <ul class="desc-lines">
+        <li>0.9.3  Cross-chain token-messaging</li>
+      </ul>
+    </div>
+  </div>
+  <div class="col-6 bg-line first pt-5 d-flex">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST Mosaic Paper</div>
+      <div class="status">Status: In Progress</div>
+      <ul class="desc-lines">
+        <li>Scalable PoS Blockchains Finalized on Ethereum</li>
+      </ul>
     </div>
   </div>
 </div>
@@ -229,31 +201,182 @@
           </div>
         </div>
         <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.
+          <span class="text-bold">Test integrations of OST on Mainnet with cash-out to OST.</span>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="row h-100 justify-content-center">
-  <div class="col-6 bg-line first pt-5 d-flex mx-atuo">
+<div class="row">
+  <div class="col-8 bg-line first pt-5 mx-auto">
     <div class="container-content p-15-10">
-      <div class="text-bold">OpenST Protocol</div>
+      <div class="text-bold">OpenST Protocol 0.9.4</div>
       <div class="status">Status: In Progress</div>
-      <ul class="list-unstyled social-icons mb-2">
-        <li>
-          <a href="">
-            <svg class="social-icon">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-              </switch>
-            </svg>
-          </a>
-        </li>
-      </ul>
       <ul class="desc-lines">
-        <li>0.9.3  Cross-chain token-messaging</li>
+        <li>Decentralized keys engine & token rules engine</li>
+      </ul>
+      <div class="mt-3 mb-2 flag-icon">
+        <svg class="mx-auto d-block">
+          <switch>
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-small-flag"></use>
+          </switch>
+        </svg>
+      </div>
+      <div class="text-bold">OpenST Protocol 0.9.5</div>
+      <div class="status">Status: In Progress</div>
+      <ul class="desc-lines">
+        <li>Mainnet Alpha</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="row quarters-year-row">
+  <div class="col-12 mt-5">
+    <div class="container-content">
+      <div class="row">
+        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
+          <svg class="milestone-logo">
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
+            </switch>
+          </svg>
+          <div>
+            <span class="year">2019</span>
+            <span class="quarter">Q1</span>
+          </div>
+        </div>
+        <div class="col-8 align-self-center pl-0">
+          <span class="text-bold">OpenST & OST Mainnet. Branded Token economies on mainnet with cash-out to OST or ETH.</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6 bg-line first pt-5 d-flex">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST Protocol 0.10.0</div>
+      <div class="status">Status: Upcoming</div>
+      <ul class="desc-lines">
+        <li>Mainnet Beta</li>
+      </ul>
+    </div>
+  </div>
+  <div class="col-6 bg-line first pt-5 d-flex">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST Mosaic Alpha</div>
+    </div>
+  </div>
+</div>
+
+<div class="row quarters-year-row">
+  <div class="col-12 mt-5">
+    <div class="container-content">
+      <div class="row">
+        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
+          <svg class="milestone-logo">
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
+            </switch>
+          </svg>
+          <div>
+            <span class="year">2019</span>
+            <span class="quarter">Q2</span>
+          </div>
+        </div>
+        <div class="col-8 align-self-center pl-0">
+          <span class="text-bold">OST General Availability for mainstream businesses.</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-8 bg-line first pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST Protocol 0.10.1</div>
+      <div class="status">Status: Upcoming</div>
+      <ul class="desc-lines">
+        <li>Wallet SDK</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="row quarters-year-row">
+  <div class="col-12 mt-5">
+    <div class="container-content">
+      <div class="row">
+        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
+          <svg class="milestone-logo">
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
+            </switch>
+          </svg>
+          <div>
+            <span class="year">2019</span>
+            <span class="quarter">Q3</span>
+          </div>
+        </div>
+        <div class="col-8 align-self-center pl-0">
+          <span class="text-bold">Fungible and non-fungible tokens.</span> Economy stabilization options. Crypto-fiat options.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6 bg-line first pt-5 d-flex">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST Protocol 0.10.2</div>
+      <div class="status">Status: Upcoming</div>
+      <ul class="desc-lines">
+        <li>Non-Fungible Tokens & Token Engineering Modules</li>
+      </ul>
+    </div>
+  </div>
+  <div class="col-6 bg-line first pt-5 d-flex">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST Mosaic Beta</div>
+    </div>
+  </div>
+</div>
+
+<div class="row quarters-year-row">
+  <div class="col-12 mt-5">
+    <div class="container-content">
+      <div class="row">
+        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
+          <svg class="milestone-logo">
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
+            </switch>
+          </svg>
+          <div>
+            <span class="year">2019</span>
+            <span class="quarter">Q4</span>
+          </div>
+        </div>
+        <div class="col-8 align-self-center pl-0">
+          <span class="text-bold">Enable anyone to run an OpenST BT-EX or BT-DEX.</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-8 bg-line first pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST Protocol 0.11.0</div>
+      <div class="status">Status: Upcoming</div>
+      <ul class="desc-lines">
+        <li>BT-EX & BT-DEX Framework</li>
       </ul>
     </div>
   </div>
@@ -283,10 +406,10 @@
 </div>
 
 <div class="row">
-  <div class="col-12 bg-line first pt-5 d-flex align-items-center">
-    <div class="container-content">
+  <div class="col-12 bg-line first pt-5 mx-auto">
+    <div class="container-content p-15-10">
       <div class="text-bold">OpenST Protocol 1.0: OpenST & OpenST Mosaic Fully Decentralized</div>
-      <div class="status">Status: Complete</div>
+      <div class="status">Status: Upcoming</div>
     </div>
   </div>
 </div>
@@ -315,9 +438,41 @@
 </div>
 
 <div class="row">
-  <div class="col-12 bg-line first pt-5 d-flex align-items-center">
-    <div class="container-content">
+  <div class="col-12 bg-line first pt-5 mx-auto">
+    <div class="container-content p-15-10">
       <div class="text-bold">OpenST 2.0: Multi-Hop Gateways</div>
+      <div class="status">Status: Upcoming</div>
+    </div>
+  </div>
+</div>
+
+<div class="row quarters-year-row">
+  <div class="col-12 mt-5">
+    <div class="container-content">
+      <div class="row">
+        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
+          <svg class="milestone-logo">
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
+            </switch>
+          </svg>
+          <div>
+            <span class="year">2021</span>
+            <span class="quarter">Q2</span>
+          </div>
+        </div>
+        <div class="col-8 align-self-center pl-0">
+          <span class="text-bold">Fully autonomous decentralized token economies on any major blockchain, at M2M-scale, with exchange liquidity.</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-12 bg-line first pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST 3.0 & OST 3.0: Additional blockchains beyond Ethereum</div>
       <div class="status">Status: Upcoming</div>
     </div>
   </div>
