--- a/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
+++ b/app/views/web/ost/roadmap/mobile/_btx_exchange.erb
@@ -9,12 +9,12 @@
             </switch>
           </svg>
           <div>
-            <span class="year">2017</span>
+            <span class="year">2018</span>
             <span class="quarter">Q4</span>
           </div>
         </div>
         <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.
+          <span class="text-bold">Test integrations of OST on Mainnet with cash-out to OST.</span>
         </div>
       </div>
     </div>
@@ -22,15 +22,10 @@
 </div>
 
 <div class="row">
-  <div class="col-12 bg-line first pt-5 d-flex align-items-center">
+  <div class="col-8 bg-line second pt-5 mx-auto">
     <div class="container-content">
-      <div class="text-bold letter-space">OST KIT R&D</div>
-      <div class="status">Status: Complete</div>
-      <ul class="desc-lines">
-        <li>Token economy design research</li>
-        <li>Token economy design pre-specs</li>
-        <li>Token economy software pre-specs</li>
-      </ul>
+      <div class="text-bold">Redeem BT for OST</div>
+      <div class="status">Status: Progress</div>
     </div>
   </div>
 </div>
@@ -46,45 +41,23 @@
             </switch>
           </svg>
           <div>
-            <span class="year">2018</span>
+            <span class="year">2019</span>
             <span class="quarter">Q1</span>
           </div>
         </div>
         <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">1600 Branded Token economies created.</span> 18.8 million token transfers executed.
+          <span class="text-bold">OpenST & OST Mainnet. Branded Token economies on mainnet with cash-out to OST or ETH.</span>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="row h-100">
-  <div class="col-12 bg-line first pt-5 d-flex align-items-center">
-    <div class="container-content">
-      <div class="text-bold">OST KIT Alpha 1</div>
-      <div class="status">Status: Complete</div>
-      <div class="play-bg">
-        <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/roadmap/ost-kit-alpha@2x.png" class="img-fluid d-block my-3"/>
-        <a href="" class="play-icon" data-toggle="modal" data-target="#helpVideoModal" data-src="https://www.youtube.com/embed/yJswJcnLYpU"></a>
-      </div>
-      <ul class="desc-lines">
-        <li>Setup Economy</li>
-        <li>Simulate Token Transfers</li>
-      </ul>
-      <p class="collapse m-0" id="kit-alpha-1-mobile">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi tempore asperiores et vel
-      </p>
-
-      <!-- aria-expanded attribute is mandatory -->
-      <!-- bootstrap changes it to true/false on toggle -->
-      <a href="#kit-alpha-1-mobile"
-         class="d-block more-desc"
-         data-toggle="collapse"
-         aria-expanded="false"
-         aria-controls="block-id">
-        <span class="collapsed">View more</span>
-        <span class="expanded">View Less</span>
-      </a>
+<div class="row">
+  <div class="col-8 bg-line second pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">Swap BT for ETH Beta</div>
+      <div class="status">Status: Upcoming</div>
     </div>
   </div>
 </div>
@@ -100,37 +73,23 @@
             </switch>
           </svg>
           <div>
-            <span class="year">2018</span>
+            <span class="year">2019</span>
             <span class="quarter">Q2</span>
           </div>
         </div>
         <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">73 successful Proofs of Concept completed</span> by developers around the world.
+          <span class="text-bold">OST General Availability for mainstream businesses.</span>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="row h-100">
-  <div class="col-12 bg-line first pt-5 d-flex align-items-center">
-    <div class="container-content">
-      <div class="text-bold">OST KIT Alpha 2</div>
-      <div class="status">Status: Complete</div>
-      <ul class="list-unstyled social-icons mb-2">
-        <li>
-          <a href="">
-            <svg class="social-icon">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-              </switch>
-            </svg>
-          </a>
-        </li>
-      </ul>
-      <ul class="desc-lines">
-        <li>Token Transfers via API</li>
-      </ul>
+<div class="row">
+  <div class="col-8 bg-line second pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">Swap BT for BT, ETH, BTC</div>
+      <div class="status">Status: Upcoming</div>
     </div>
   </div>
 </div>
@@ -146,41 +105,23 @@
             </switch>
           </svg>
           <div>
-            <span class="year">2018</span>
+            <span class="year">2019</span>
             <span class="quarter">Q3</span>
           </div>
         </div>
         <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">200+ developer</span> teams integrating OST Alpha 3 into their apps. Publish framework for scaling token economies.
+          <span class="text-bold">Fungible and non-fungible tokens.</span> Economy stabilization options. Crypto-fiat options.
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="row h-100">
-  <div class="col-12">
-    <div class="row h-100">
-      <div class="col-12 bg-line first pt-5 d-flex">
-        <div class="container-content">
-          <div class="text-bold">OST KIT Alpha 3</div>
-          <div class="status">Status: In Progress</div>
-          <ul class="list-unstyled social-icons mb-2">
-            <li>
-              <a href="">
-                <svg class="social-icon">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                  </switch>
-                </svg>
-              </a>
-            </li>
-          </ul>
-          <ul class="desc-lines">
-            <li>Wallet-lite Ledger & Balance APIs</li>
-          </ul>
-        </div>
-      </div>
+<div class="row">
+  <div class="col-8 bg-line second pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">Swap BT for Fiat </div>
+      <div class="status">Status: Upcoming</div>
     </div>
   </div>
 </div>
@@ -196,26 +137,151 @@
             </switch>
           </svg>
           <div>
-            <span class="year">2018</span>
+            <span class="year">2019</span>
             <span class="quarter">Q4</span>
           </div>
         </div>
         <div class="col-8 align-self-center pl-0">
-          <span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.
+          <span class="text-bold">Fungible and non-fungible tokens.</span> Economy stabilization options. Crypto-fiat options.
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<div class="row h-100 justify-content-center">
-  <div class="col-12 bg-line first pt-5 d-flex mx-atuo">
-    <div class="container-content">
-      <div class="text-bold">OST KIT Alpha 4</div>
+<div class="row">
+  <div class="col-9 bg-line second pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">Additional Currency Pairings</div>
       <div class="status">Status: Upcoming</div>
-      <ul class="desc-lines">
-        <li>Scalability & Performance Upgrades & Testing. Multi-Chain</li>
-      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="row quarters-year-row">
+  <div class="col-12 mt-5">
+    <div class="container-content">
+      <div class="row">
+        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
+          <svg class="milestone-logo">
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
+            </switch>
+          </svg>
+          <div>
+            <span class="year">2020</span>
+            <span class="quarter">Q1</span>
+          </div>
+        </div>
+        <div class="col-8 align-self-center pl-0">
+          <span class="text-bold">Enable anyone to run an OpenST BT-EX or BT-DEX.</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-9 bg-line second pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">Additional Currency Pairings</div>
+      <div class="status">Status: Upcoming</div>
+    </div>
+  </div>
+</div>
+
+<div class="row quarters-year-row">
+  <div class="col-12 mt-5">
+    <div class="container-content">
+      <div class="row">
+        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
+          <svg class="milestone-logo">
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
+            </switch>
+          </svg>
+          <div>
+            <span class="year">2020</span>
+            <span class="quarter">Q2</span>
+          </div>
+        </div>
+        <div class="col-8 align-self-center pl-0">
+          <span class="text-bold">Fully autonomous decentralized token economies.</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-9 bg-line second pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">Additional Currency Pairings</div>
+      <div class="status">Status: Upcoming</div>
+    </div>
+  </div>
+</div>
+
+<div class="row quarters-year-row">
+  <div class="col-12 mt-5">
+    <div class="container-content">
+      <div class="row">
+        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
+          <svg class="milestone-logo">
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
+            </switch>
+          </svg>
+          <div>
+            <span class="year">2020</span>
+            <span class="quarter">Q4</span>
+          </div>
+        </div>
+        <div class="col-8 align-self-center pl-0">
+          <span class="text-bold">Scale OST to machine-to-machine transactions.</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-12 bg-line second pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST 2.0: Multi-Hop Gateways</div>
+      <div class="status">Status: Upcoming</div>
+    </div>
+  </div>
+</div>
+
+<div class="row quarters-year-row">
+  <div class="col-12 mt-5">
+    <div class="container-content">
+      <div class="row">
+        <div class="col-4 align-self-center justify-content-center text-center" style="font-size: 0">
+          <svg class="milestone-logo">
+            <switch>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
+            </switch>
+          </svg>
+          <div>
+            <span class="year">2021</span>
+            <span class="quarter">Q2</span>
+          </div>
+        </div>
+        <div class="col-8 align-self-center pl-0">
+          <span class="text-bold">Fully autonomous decentralized token economies on any major blockchain, at M2M-scale, with exchange liquidity.</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-12 bg-line second pt-5 mx-auto">
+    <div class="container-content p-15-10">
+      <div class="text-bold">OpenST 3.0 & OST 3.0: Additional blockchains beyond Ethereum</div>
+      <div class="status">Status: Upcoming</div>
     </div>
   </div>
 </div>
