passing data to erb from partial for row header

--- a/app/views/web/ost/roadmap/desktop/_2017-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2017-q4.erb
@@ -1,29 +1,11 @@
 <div class="q-elements" id="2017-q4">
-  <div class="row quarters-year-row">
-    <div class="col-12 mt-5">
-      <div class="container-content pt-1 pb-0">
-        <div class="row">
-          <div class="col-3 align-self-center">
-            <div class="row">
-              <div class="col-9 ml-auto text-center pr-0">
-                <span class="year">2017</span>
-                <span class="quarter">Q4</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-2 align-self-end px-0" style="font-size: 0">
-            <svg class="milestone-logo">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-              </switch>
-            </svg>
-          </div>
-          <div class="col-7 align-self-center pl-0">
-            <span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.
-          </div>
-        </div>
-      </div>
-    </div>
+
+  <div class="mt-5">
+    <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
+      year: '2017',
+      quarter: 'Q4',
+      desc_html: '<span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.'
+    } %>
   </div>
 
   <div class="row bg-h-border position-relative">
