--- a/app/views/web/ost/roadmap/desktop/_2019-q2.erb
+++ b/app/views/web/ost/roadmap/desktop/_2019-q2.erb
@@ -1,30 +1,10 @@
 <div class="q-elements" id="2019-q2">
-  <div class="row quarters-year-row">
-    <div class="col-12">
-      <div class="container-content pt-1 pb-0">
-        <div class="row">
-          <div class="col-3 align-self-center">
-            <div class="row">
-              <div class="col-9 ml-auto text-center pr-0">
-                <span class="year">2019</span>
-                <span class="quarter">Q2</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-2 align-self-end px-0" style="font-size: 0">
-            <svg class="milestone-logo">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-              </switch>
-            </svg>
-          </div>
-          <div class="col-7 align-self-center pl-0">
-            <span class="text-bold">OST General Availability for mainstream businesses.</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
+  <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
+    year: '2019',
+    quarter: 'Q2',
+    desc_html: '<span class="text-bold">OST General Availability for mainstream businesses.</span>'
+  } %>
 
   <div class="row bg-h-border position-relative">
     <div class="col-4">
