--- a/app/views/web/ost/roadmap/desktop/_2020-q3.erb
+++ b/app/views/web/ost/roadmap/desktop/_2020-q3.erb
@@ -1,25 +1,43 @@
-<div class="q-elements" id="2020-q3">
-  <div class="row quarters-year-row">
+<div class="q-elements" id="2020-q2">
+
+  <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
+    year: '2020',
+    quarter: 'Q3',
+    desc_html: '<span class="text-bold">Fully autonomous decentralized token economies.</span>'
+  } %>
+
+  <div class="row">
+    <div class="col-8">
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-3 bg-line first py-4"></div>
+            <div class="col-3 bg-line first py-4"></div>
+            <div class="col-6 bg-line second py-4"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="row">
+        <div class="col-12 bg-line third py-4"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-12">
-      <div class="container-content pt-1 pb-0">
-        <div class="row">
-          <div class="col-3 align-self-center">
-            <div class="row">
-              <div class="col-9 ml-auto text-center pr-0">
-                <span class="year">2020</span>
-                <span class="quarter">Q3</span>
-              </div>
-            </div>
+      <div class="row">
+        <div class="col-8">
+          <div class="container-content">
+            <div class="text-bold">OpenST Protocol 1.0: OpenST & OpenST Mosaic Fully Decentralized</div>
+            <div class="status">Status: Upcoming</div>
           </div>
-          <div class="col-2 align-self-end pl-0" style="font-size: 0">
-            <svg class="milestone-logo">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-              </switch>
-            </svg>
-          </div>
-          <div class="col-7 align-self-center pl-0">
-            <span class="text-bold">200+ developer</span> teams integrating OST Alpha 3 into their apps. Publish framework for scaling token economies.
+        </div>
+        <div class="col-4 bg-line third">
+          <div class="container-content">
+            <div class="text-bold">Additional Currency Pairings</div>
+            <div class="status">Status: Upcoming</div>
           </div>
         </div>
       </div>
@@ -27,67 +45,20 @@
   </div>
 
   <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4">
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-6 bg-line first py-5 d-flex align-items-center">
-                  <div class="container-content p-15-10">
-                    <div class="text-bold">OpenST Protocol</div>
-                    <div class="status">Status: In Progress</div>
-                    <ul class="list-unstyled social-icons mb-2">
-                      <li>
-                        <a href="">
-                          <svg class="social-icon">
-                            <switch>
-                              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                            </switch>
-                          </svg>
-                        </a>
-                      </li>
-                    </ul>
-                    <ul class="desc-lines">
-                      <li>0.9.3  Cross-chain token-messaging</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-6 bg-line first py-5 d-flex align-items-center">
-                  <div class="container-content p-15-10">
-                    <div class="text-bold">OpenST Mosaic R&D</div>
-                    <div class="status">Status: In Progress</div>
-                    <ul class="desc-lines">
-                      <li>Scalable PoS Blockchains Finalized on Ethereum</li>
-                    </ul>
-                    <a href="" class="d-block more-desc" target="_blank">Read more</a>
-                  </div>
-                </div>
-              </div>
-            </div>
+    <div class="col-8">
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-3 bg-line first py-4"></div>
+            <div class="col-3 bg-line first py-4"></div>
+            <div class="col-6 bg-line second py-4"></div>
           </div>
         </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            <div class="text-bold">OST KIT Alpha 3</div>
-            <div class="status">Status: In Progress</div>
-            <ul class="list-unstyled social-icons mb-2">
-              <li>
-                <a href="">
-                  <svg class="social-icon">
-                    <switch>
-                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-medium"></use>
-                    </switch>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-            <ul class="desc-lines">
-              <li>Wallet-lite Ledger & Balance APIs</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="row">
+        <div class="col-12 bg-line third py-4"></div>
       </div>
     </div>
   </div>
