--- a/app/views/web/ost/roadmap/desktop/_2021-q1.erb
+++ b/app/views/web/ost/roadmap/desktop/_2021-q1.erb
@@ -1,30 +1,10 @@
 <div class="q-elements" id="2021-q1">
-  <div class="row quarters-year-row">
-    <div class="col-12">
-      <div class="container-content pt-1 pb-0">
-        <div class="row">
-          <div class="col-3 align-self-center">
-            <div class="row">
-              <div class="col-9 ml-auto text-center pr-0">
-                <span class="year">2021</span>
-                <span class="quarter">Q1</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-2 align-self-end pl-0" style="font-size: 0">
-            <svg class="milestone-logo">
-              <switch>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-milestone"></use>
-              </switch>
-            </svg>
-          </div>
-          <div class="col-7 align-self-center">
-            <span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
+  <%= render :partial => "/web/ost/roadmap/desktop/quarter-header", locals: {
+    year: '2021',
+    quarter: 'Q1',
+    desc_html: '<span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.'
+  } %>
 
   <div class="row">
     <div class="col-8">
@@ -47,14 +27,9 @@
 
   <div class="row">
     <div class="col-12">
-      <div class="row">
-        <div class="col-8">
-          <div class="container-content">
-            <div class="text-bold">OpenST Protocol 1.0: OpenST & OpenST Mosaic Fully Decentralized</div>
-            <div class="status">Status: Upcoming</div>
-          </div>
-        </div>
-        <div class="col-4 bg-line third"></div>
+      <div class="container-content">
+        <div class="text-bold">OpenST 3.0 & OST 3.0: Additional blockchains beyond Ethereum</div>
+        <div class="status">Status: Upcoming</div>
       </div>
     </div>
   </div>
